--- a/Resources/Views/home.html
+++ b/Resources/Views/home.html
@@ -7,19 +7,21 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Chewy&display=swap" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" rel="stylesheet">
-    <link href="../CSS/style.css" rel="stylesheet">
+    <link href="Resources/CSS/style.css" rel="stylesheet">
+    <base href="/My-Website/">
+
 </head>
   <body data-bs-theme="dark">
     <!-- Navbar -->
 <header class="py-3">
   <div class="container-fluid d-flex align-items-center justify-content-between">
     <nav class="d-flex gap-5 font-chewy text-center">
-      <a href="../Views/home.html" class="text-decoration-none text-light" style="font-size: 30px">Home</a>
-      <a href="../Views/hobbies.html" class="text-decoration-none text-light" style="font-size: 30px">Hobbies</a>
-      <a href="../Views/projects.html" class="text-decoration-none text-light" style="font-size: 30px">Projects</a>
+      <a href="Views/home.html" class="text-decoration-none text-light" style="font-size: 30px">Home</a>
+      <a href="Views/hobbies.html" class="text-decoration-none text-light" style="font-size: 30px">Hobbies</a>
+      <a href="Views/projects.html" class="text-decoration-none text-light" style="font-size: 30px">Projects</a>
     </nav>
     <!-- Right avatar -->
-    <img src="../Img/White Me.jpg" alt="Logo" width="50" height="50" class="rounded-circle">
+    <img src="Img/White Me.jpg" alt="Logo" width="50" height="50" class="rounded-circle">
   </div>
   <hr style="border: 5px solid #ffffff; margin: 15px 0;">
 </header>
@@ -31,7 +33,7 @@
             
             <!-- Left: Photo -->
             <div class="col-md-6">
-              <img src="../Img/White Me.jpg" 
+              <img src="Img/White Me.jpg" 
                    width="400" height="400" 
                    class="img-fluid rounded shadow"
                    style="display:block; margin:0 auto; position:relative; left:-20px;">
@@ -53,7 +55,7 @@
                     accessiable to all people with ease
                 </p>
                 <div class="text-center">
-                  <a href="../Views/resume.html" class="btn btn-primary btn-lg fw-semibold" rel="noopener">
+                  <a href="Views/resume.html" class="btn btn-primary btn-lg fw-semibold" rel="noopener">
                     Resume
                   </a>
                 </div>
